force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_EstimatedNoOfPropertiesAffected__c.field-meta.xml
<CustomField>
    <fullName>FSM_EstimatedNoOfPropertiesAffected__c</fullName>
    <inlineHelpText>How many properties do we think will be affected if we isolate the main. To get an accurate amount ask Network control to complete a CWDP of the shut.</inlineHelpText>
    <label>Estimated No. of Properties affected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>