force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_ESTLocation__c.field-meta.xml
<CustomField>
    <fullName>FSM_ESTLocation__c</fullName>
    <label>EST Location (X,Y)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>