force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_ESTLocationX__c.field-meta.xml
<CustomField>
    <fullName>FSM_ESTLocationX__c</fullName>
    <description>created as part of sfs-6000</description>
    <label>EST Location (X)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>