force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_ESTLocationY__c.field-meta.xml
<CustomField>
    <fullName>FSM_ESTLocationY__c</fullName>
    <description>created as part of sfs-6000</description>
    <label>EST Location (Y)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>