force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_FailureType__c.field-meta.xml
<CustomField>
    <fullName>FSM_FailureType__c</fullName>
    <description>SFS-1322</description>
    <label>Type of Failure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Long Fracture</fullName>
            </value>
            <value>
                <fullName>Ring Fracture</fullName>
            </value>
            <value>
                <fullName>Collar</fullName>
            </value>
            <value>
                <fullName>Joint</fullName>
            </value>
            <value>
                <fullName>Split</fullName>
            </value>
            <value>
                <fullName>Power Failure</fullName>
            </value>
            <value>
                <fullName>Reservoir Failure</fullName>
            </value>
            <value>
                <fullName>Outstation / Telemetry Failure</fullName>
            </value>
            <value>
                <fullName>Treatment / Source Failure</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>