force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_Feedback__c.field-meta.xml
<CustomField>
    <fullName>FSM_Feedback__c</fullName>
    <description>Created as part of SFS-1300
Updated as part of SFL-1102</description>
    <label>Feedback</label>
    <length>700</length>
    <type>LongTextArea</type>
</CustomField>