force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_FileName__c.field-meta.xml
<CustomField>
    <fullName>FSM_FileName__c</fullName>
    <description>created as a part of FSM-5400</description>
    <label>File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>