force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_FinalReadMethod__c.field-meta.xml
<CustomField>
    <fullName>FSM_FinalReadMethod__c</fullName>
    <description>Created for SAL-1321</description>
    <label>Final Meter Read Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Visual</fullName>
            </value>
            <value>
                <fullName>Touchpad</fullName>
            </value>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>Remote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>