force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_First_Time_Rein__c.field-meta.xml
<CustomField>
    <fullName>FSM_First_Time_Rein__c</fullName>
    <formula>!ISNULL( TEXT(FSM_ReasonForFirstTimeReinstatement__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Time Rein</label>
    <type>Checkbox</type>
</CustomField>