force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_FlowTest__c.field-meta.xml
<CustomField>
    <fullName>FSM_FlowTest__c</fullName>
    <description>SFS-1320</description>
    <inlineHelpText>Select One</inlineHelpText>
    <label>Flow Test Completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>