force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_FlowValveFitted__c.field-meta.xml
<CustomField>
    <fullName>FSM_FlowValveFitted__c</fullName>
    <description>Created as part of sfs-6000</description>
    <label>Flow Valve Fitted</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>