force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_FootwayWidth__c.field-meta.xml
<CustomField>
    <fullName>FSM_FootwayWidth__c</fullName>
    <description>Updated as part of SFS-8936</description>
    <inlineHelpText>Using your Measuring wheel please accurately input the footway width. We need this to be accurate as we send this information to the council to gain a permit approval.</inlineHelpText>
    <label>Footway Width (m)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>