force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_ForecastDuration__c.field-meta.xml
<CustomField>
    <fullName>FSM_ForecastDuration__c</fullName>
    <formula>IF(DATETIMEVALUE(FSM_PlannedRestDateAndTime__c)&gt;DATETIMEVALUE(FSM_InterruptionStartDateAndTime__c),



DATETIMEVALUE(FSM_PlannedRestDateAndTime__c)-DATETIMEVALUE(FSM_InterruptionStartDateAndTime__c),
DATETIMEVALUE(FSM_InterruptionStartDateAndTime__c)-DATETIMEVALUE(FSM_PlannedRestDateAndTime__c) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast Duration (Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>