force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_FormType__c.field-meta.xml
<CustomField>
    <fullName>FSM_FormType__c</fullName>
    <description>Created as part of SFS-1950, SFS-2982</description>
    <label>Form Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Short Duration Works Risk Assessment</fullName>
            </value>
            <value>
                <fullName>NHH Meter</fullName>
            </value>
            <value>
                <fullName>Gap Site</fullName>
            </value>
            <value>
                <fullName>Site Area, SWD, Foul</fullName>
            </value>
            <value>
                <fullName>Job Completion - (Water Networks)</fullName>
            </value>
            <value>
                <fullName>Pre-site checklist</fullName>
            </value>
            <value>
                <fullName>Risk Assessment - Site Specific</fullName>
            </value>
            <value>
                <fullName>DST Self Audit</fullName>
            </value>
            <value>
                <fullName>Network Management Form</fullName>
            </value>
            <value>
                <fullName>Non-infra Raise new and follow on work</fullName>
            </value>
            <value>
                <fullName>Infra Follow On Work Request</fullName>
            </value>
            <value>
                <fullName>Digger/Trailer Checks/C&amp;G Check</fullName>
            </value>
            <value>
                <fullName>Sewerage-Job Feedback</fullName>
            </value>
            <value>
                <fullName>Sewerage-Further Work Request (SCM)</fullName>
            </value>
            <value>
                <fullName>Sewerage Incident Report Form</fullName>
            </value>
            <value>
                <fullName>Reinstatement Form</fullName>
            </value>
            <value>
                <fullName>Rechargeable Works-Damage Description Report</fullName>
            </value>
            <value>
                <fullName>Metering Job Feedback</fullName>
            </value>
            <value>
                <fullName>Meter Details Form</fullName>
            </value>
            <value>
                <fullName>Distribution Interruption</fullName>
            </value>
            <value>
                <fullName>Distribution Feedback</fullName>
                <default>true</default>
                <label>Distribution Feedback</label>
            </value>
            <value>
                <fullName>SPS Standard</fullName>
            </value>
            <value>
                <fullName>SPS Complex</fullName>
            </value>
            <value>
                <fullName>Asset Update Form</fullName>
            </value>
            <value>
                <fullName>Vehicle Check</fullName>
            </value>
            <value>
                <fullName>Risk Assessment - Paper</fullName>
            </value>
            <value>
                <fullName>Waste Water Chemical Acceptance and Authorisation to Discharge Form</fullName>
            </value>
            <value>
                <fullName>Clean Water Chemical Acceptance and Authorisation to Discharge Assessment</fullName>
            </value>
            <value>
                <fullName>Working Set Pre Use Inspection</fullName>
            </value>
            <value>
                <fullName>HD Risk Assessment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>