force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_Friday__c.field-meta.xml
<CustomField>
    <fullName>FSM_Friday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Friday</label>
    <type>Checkbox</type>
</CustomField>