force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_Gassing__c.field-meta.xml
<CustomField>
    <fullName>FSM_Gassing__c</fullName>
    <description>Created as part pf sfs-6000</description>
    <label>Gassing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unable to deploy</fullName>
            </value>
            <value>
                <fullName>Point of interest found</fullName>
            </value>
            <value>
                <fullName>No point of interest found</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>