force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_Generate_PDF__c.field-meta.xml
<CustomField>
    <fullName>FSM_Generate_PDF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate PDF</label>
    <type>Checkbox</type>
</CustomField>