force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_GennyCalibDateTIme__c.field-meta.xml
<CustomField>
    <fullName>FSM_GennyCalibDateTIme__c</fullName>
    <description>Created as part of SFS-7957</description>
    <label>Genny Calibration Date and Time</label>
    <type>DateTime</type>
</CustomField>