force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_GennyCalibrationDate__c.field-meta.xml
<CustomField>
    <fullName>FSM_GennyCalibrationDate__c</fullName>
    <description>Created as part of SFS-5316</description>
    <label>Genny Calibration Date</label>
    <type>Date</type>
</CustomField>