force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_GennySerialNumber__c.field-meta.xml
<CustomField>
    <fullName>FSM_GennySerialNumber__c</fullName>
    <description>Created as part of SFS-2982</description>
    <label>Genny Serial Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>