force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_GridRefOfProposedWorkX__c.field-meta.xml
<CustomField>
    <fullName>FSM_GridRefOfProposedWorkX__c</fullName>
    <inlineHelpText>Please input the Grid reference of where the works will take place, this can be located using GISST. This grid reference is where the works are taking place and could result in fines from the council if not inputted correctly.</inlineHelpText>
    <label>Grid Ref of proposed work (x)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>