force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_GridsReferenceY__c.field-meta.xml
<CustomField>
    <fullName>FSM_GridsReferenceY__c</fullName>
    <description>Created for SAL-1321</description>
    <label>Grids Reference Y</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>