force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_GSNumberDials__c.field-meta.xml
<CustomField>
    <fullName>FSM_GSNumberDials__c</fullName>
    <description>Created as a part of SFS-3041</description>
    <label>Number Of Dials</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>