force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_GSSPayable__c.field-meta.xml
<CustomField>
    <fullName>FSM_GSSPayable__c</fullName>
    <description>sfs-1322</description>
    <label>GSS Payable? Reason:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appointments</fullName>
            </value>
            <value>
                <fullName>Warnings</fullName>
            </value>
            <value>
                <fullName>Over Runs</fullName>
            </value>
            <value>
                <fullName>Emergency Interruptions</fullName>
            </value>
            <value>
                <fullName>DG2 Pressure</fullName>
            </value>
            <value>
                <fullName>Emergency Restrictions</fullName>
            </value>
            <value>
                <fullName>Boiled Water</fullName>
            </value>
            <value>
                <fullName>Multiple Causes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>