force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_GSSPayments__c.field-meta.xml
<CustomField>
    <fullName>FSM_GSSPayments__c</fullName>
    <label>Number of GSS Payments:</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>