force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_HachMeterCalibration__c.field-meta.xml
<CustomField>
    <fullName>FSM_HachMeterCalibration__c</fullName>
    <description>Created as part of SFS-2982</description>
    <label>Hach meter calibration</label>
    <type>Date</type>
</CustomField>