force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_HandBrakeCorrectlyPositioned__c.field-meta.xml
<CustomField>
    <fullName>FSM_HandBrakeCorrectlyPositioned__c</fullName>
    <label>Check hand brake is correctly positioned</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>