force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_HardStandingM2Designated__c.field-meta.xml
<CustomField>
    <fullName>FSM_HardStandingM2Designated__c</fullName>
    <description>Created as a part of SFS-1314</description>
    <label>Hard Standing m2 (designated areas):</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>