force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_HasLeakBeenQuantified__c.field-meta.xml
<CustomField>
    <fullName>FSM_HasLeakBeenQuantified__c</fullName>
    <description>created as part of sfs-6000</description>
    <label>Has the leak been quantified?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Check meter</fullName>
            </value>
            <value>
                <fullName>Existing meter</fullName>
            </value>
            <value>
                <fullName>Estimated</fullName>
            </value>
            <value>
                <fullName>Logged</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>