force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_HasTheHoseHolderToolsBeenChecke__c.field-meta.xml
<CustomField>
    <fullName>FSM_HasTheHoseHolderToolsBeenChecke__c</fullName>
    <description>Yes
No
NA</description>
    <label>Has the hose, holder &amp; tools been checke</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>