force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_HasTheHydraulicPipesBeenVisuallyIn__c.field-meta.xml
<CustomField>
    <fullName>FSM_HasTheHydraulicPipesBeenVisuallyIn__c</fullName>
    <description>Created as part of SFS-5319</description>
    <label>Has the hydraulic pipes been visually in</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>