force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_HouseName__c.field-meta.xml
<CustomField>
    <fullName>FSM_HouseName__c</fullName>
    <description>Created for SAL-1321</description>
    <label>House Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>