force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_HouseNo__c.field-meta.xml
<CustomField>
    <fullName>FSM_HouseNo__c</fullName>
    <description>Created for SAL-1321</description>
    <label>House Number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>