force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_IllegalLocation__c.field-meta.xml
<CustomField>
    <fullName>FSM_IllegalLocation__c</fullName>
    <description>Created as a part of SFS-2996</description>
    <label>Location of Illegal Use</label>
    <length>255</length>
    <type>Text</type>
</CustomField>