force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_IllegalUse__c.field-meta.xml
<CustomField>
    <fullName>FSM_IllegalUse__c</fullName>
    <description>created as part of  SFS-4979</description>
    <label>Illegal Use?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>