force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_IllegalUseReason__c.field-meta.xml
<CustomField>
    <fullName>FSM_IllegalUseReason__c</fullName>
    <description>Created as a part of  SFS-2996</description>
    <label>Reason for unauthorised use</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unauthorised standpipe</fullName>
            </value>
            <value>
                <fullName>No meter on standpipe</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>