force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_IllegalUserName__c.field-meta.xml
<CustomField>
    <fullName>FSM_IllegalUserName__c</fullName>
    <description>Created as  a part of SFS-2996.</description>
    <label>Illegal User Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>