force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_IncidentTrackerDownloaded__c.field-meta.xml
<CustomField>
    <fullName>FSM_IncidentTrackerDownloaded__c</fullName>
    <label>Incident tracker downloaded and working</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>