force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_INFRAFWRActivityType__c.field-meta.xml
<CustomField>
    <fullName>FSM_INFRAFWRActivityType__c</fullName>
    <inlineHelpText>Select One</inlineHelpText>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Utility repair &amp; maintenance work</fullName>
            </value>
            <value>
                <fullName>Utility asset work</fullName>
            </value>
            <value>
                <fullName>Optional permit no fee</fullName>
            </value>
            <value>
                <fullName>New service connection</fullName>
            </value>
            <value>
                <fullName>Interim to perm reinstatement</fullName>
            </value>
            <value>
                <fullName>Diversionary works</fullName>
            </value>
            <value>
                <fullName>Disconnection or alternative supply</fullName>
            </value>
            <value>
                <fullName>Core sampling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>