force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_InitialMeterReading__c.field-meta.xml
<CustomField>
    <fullName>FSM_InitialMeterReading__c</fullName>
    <description>Created for SAL-1321</description>
    <label>Initial Meter Readings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>