force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_InterruptionCause__c.field-meta.xml
<CustomField>
    <fullName>FSM_InterruptionCause__c</fullName>
    <description>sfs-1322</description>
    <label>Cause of Interruption</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Air Lock</fullName>
            </value>
            <value>
                <fullName>Hydrant Repair</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Rehab</fullName>
            </value>
            <value>
                <fullName>Reservoir - Valve</fullName>
            </value>
            <value>
                <fullName>Telemetry Fault</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>